@@ -423,6 +423,35 @@ if (is_string($allowedFileTypes)) {
 	$allowedFileTypes = explode(',', $allowedFileTypes);
 }
 
+		$this->doc->inDocStylesArray[] = "
+
+table#typo3-curUrl { margin: 10px 0 0 10px; }
+
+form#ltargetform { margin-left: 10px; }
+
+div#medialistfunctions {
+	background-color: #dadada;
+	font-weight: bold;
+	padding: 2px 5px;
+	margin-top: 2px;
+	clear: both;
+}
+
+#medialistfunctions div.infobar-extraline { float: left; line-height: 26px; }
+#medialistfunctions div#searchbox { float: right; line-height: 26px; }
+#medialistfunctions div#searchbox input#searchString { width: 130px; height: 15px; margin-right: 5px; }
+
+#medialistfunctions label {  min-width: 100px; vertical-align: top; display: block; float: left; }
+
+#medialistfunctions form { padding: 0; }
+#medialistfunctions form.sortingSelector {  line-height: 26px; clear: both; }
+
+div.buttonToggleDisplayWrap { margin-left: 10px; margin-bottom: 5px; clear: both; }
+form.formNoPadding { padding: 0 !important; }
+
+		";
+
+
 		$content = '';
 
 			// the browse trees
@@ -445,17 +474,14 @@ if (is_string($allowedFileTypes)) {
 		$allowed = implode(' / -', $allowed);
 
 		$fileList = '';
-		$fileList .= $allowed ? $this->barheader($allowed.' ') : '<h3 class="bgColor5">&nbsp;</h3>';
-		$fileList .= $this->doc->spacer(5);
+		//$fileList .= $allowed ? $this->barheader($allowed.' ') : '<h3 class="bgColor5">&nbsp;</h3>';
+		//$fileList .= $this->doc->spacer(5);
 		$fileList .= $this->renderFileList($files, $this->mode, $this->act);
 
 
 		$content .= $this->getFormTag();
 		// fix for MSIE 80 breaking the table-layout due to nested forms
 		$content .= '<form action="#" method="post" id="nested-form-bug"></form>';
-		$content .= $this->getSelectionSelector();
-		$content .= $this->damSC->getResultInfoBar();
-
 
 
 			// Putting the parts together, side by side:
@@ -475,14 +501,13 @@ if (is_string($allowedFileTypes)) {
 		$content .= '</form>';
 
 			// current selection box
-		$content .= $this->getFormTag();
+		$content .= $this->getFormTag('','formNoPadding');
 
 		$selectionBox = '<div style="width:70%;">'.$this->damSC->getCurrentSelectionBox().'</div>';
 		$content .= $this->damSC->buttonToggleDisplay('selectionBox', $GLOBALS['LANG']->getLL('selection',1), $selectionBox);
 		$content .= '</form>';
 
 		$content .= $this->getFormTag();
-		$content .= $this->damSC->getSearchBox('simple', false);
 		$content .= '</form>';
 		
 		return $content;
@@ -520,7 +545,7 @@ if (is_string($allowedFileTypes)) {
 
 		$selectionSelector = t3lib_BEfunc::getFuncMenu($this->addParams, 'SET[txdamSel]', $this->getModSettings('txdamSel'), $selectionSelector);
 
-		$content .= '<div class="infobar-extraline">'.$GLOBALS['LANG']->getLL('selection',1).': '.$selectionSelector.'</div>';
+		$content .= '<div class="infobar-extraline"><label>' . $GLOBALS['LANG']->getLL('selection',1) . ':</label> '.$selectionSelector.'</div>';
 
 		return $content;
 	}
@@ -550,7 +575,7 @@ if (is_string($allowedFileTypes)) {
 				$fL = is_array($TCA['tx_dam']['columns'][$field]) ? preg_replace('#:$#', '', $GLOBALS['LANG']->sL($TCA['tx_dam']['columns'][$field]['label'])) : '['.$field.']';
 				$fieldsSelItems[$field] = t3lib_div::fixed_lgd_cs($fL, 15);
 			}
-			$sortingSelector = $GLOBALS['LANG']->sL('LLL:EXT:dam/lib/locallang.xml:labelSorting',1).' ';
+			$sortingSelector = '<label>' . $GLOBALS['LANG']->sL('LLL:EXT:dam/lib/locallang.xml:labelSorting',1).'</label> ';
 			$sortingSelector .= t3lib_befunc::getFuncMenu($this->addParams, 'SET[txdam_sortField]', $this->damSC->MOD_SETTINGS['txdam_sortField'], $fieldsSelItems);
 			
 			if($this->damSC->MOD_SETTINGS['txdam_sortRev'])	{
@@ -566,11 +591,21 @@ if (is_string($allowedFileTypes)) {
 						'<img'.t3lib_iconWorks::skinImg($BACK_PATH,'gfx/pil2down.gif','width="12" height="7"').' alt="" />'.
 						'</button>';
 			}
-			$sortingSelector = $this->getFormTag().$sortingSelector.'</form>';
+			$sortingSelector = $this->getFormTag('','sortingSelector').$sortingSelector.'</form>';
 		}
 
+		$out .= '<div id="medialistfunctions">';
+		$out .= $this->getSelectionSelector();
+		$out .= $this->getFormTag();
+		$out .= $this->damSC->getSearchBox('simple', false,'',true);
+		$out .= '</form>';
 		$out .= $sortingSelector;
-		$out .= $this->doc->spacer(20);
+		$out .= '</div>';
+		$out .= $this->doc->spacer(10);
+		$out .= $this->damSC->getResultInfoBar();
+		$out .= $this->doc->spacer(10);
+
+
 
 			// Listing the files:
 		if (is_array($files) AND count($files))	{
@@ -731,6 +766,7 @@ if (is_string($allowedFileTypes)) {
 						</tr>';
 			}
 
+
 			// Wrap all the rows in table tags:
 		$out .= '
 
@@ -755,6 +791,9 @@ if (is_string($allowedFileTypes)) {
 			$addAllButton = '<div class="addAllButton"><span class="button"'.$titleAttrib.'>'.$ATag_add.$addIcon.$label.'</a></span></div>';
 			$out = $out.$addAllButton;
 		}
+
+		$out .= $this->doc->spacer(20);
+		$out .= $this->damSC->getResultInfoBar();
 
 			// Return accumulated content for filelisting:
 		return $out;
@@ -1224,10 +1263,13 @@ if (is_string($allowedFileTypes)) {
 
 	}
 
-	function getFormTag($name='') {
+	function getFormTag($name=false, $class=false) {
 		global $TYPO3_CONF_VARS;
-		
-		return '<form action="'.htmlspecialchars(t3lib_div::linkThisScript($this->addParams)).'" method="post" name="'.$name.'" enctype="'.$TYPO3_CONF_VARS['SYS']['form_enctype'].'">';
+
+		$classAttribute = $class ? ' class="' . $class. '"' : '';
+		$nameAndIdAttributes = $name ? ' name="' . $name . '" id="' . $name . '" ' : '';
+
+		return '<form action="'.htmlspecialchars(t3lib_div::linkThisScript($this->addParams)).'" method="post" ' . $nameAndIdAttributes . $classAttribute . ' enctype="'.$TYPO3_CONF_VARS['SYS']['form_enctype'].'">';
 	}
 
 
