@@ -1,3 +1,6 @@
+2011-01-26  Dan Osipov <dosipov@phillyburbs.com>
+	* Fix #9777: Usability issues with the DAM media browser (Thanks Lorenz Ulrich)
+
 2011-01-26  Lorenz Ulrich <lorenz.ulrich@visol.ch>
 	* Fix #17322: DBctrl Icons are not floating
 
